2003-11-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi: More target vs. rule editing.  Back out some
	of the previous changes.  It's OK to talk about targets as "entry
	points", or as thing to build, but targets cannot be run: rules
	are run.

	* doc/automake.texi: s/target/rule/ where appropriate.  A target
	is the destination of a target rule, not the rule itself.
	Suggested by Bruno Haible.

2003-11-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.7g.

	* configure.ac, NEWS: Bump version to 1.7f.

	* automake.in (prepend_srcdir): Parenthesize @inputs to remove
	a maintainer-check warning.
	* tests/subst2.test: Rewrite the $MAKE invocation to please
	maintainer-check.

	* lib/config.sub, lib/config.guess, lib/texinfo.tex: New upstream
	versions.

	* doc/automake.texi (Program variables): Mention per-target
	_CPPFLAGS in the documentation of INCLUDES.
	* automake.in (generate_makefile): Likewise in the INCLUDES diagnostic.
	Report from Bob Friesenhahn.

	* doc/automake.texi (Extending): Elaborate on overriding.
	* NEWS: Likewise.
	Suggested by Bruno Haible.

2003-11-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (output): Add $(am__empty) to variable
	definitions that end with a line full of @substitutions@ that
	would confuse HP-UX Make if it were blank.
	(transform_variable_recursively): Make sure not to erase empty
	variables.
	* tests/Makefile.am (TESTS): Add subst2.test.
	* tests/subst2.test: New file.
	Report from Harlan Stenn.

	* lib/am/texibuild.am (%SOURCE_SUFFIX%.html): Work around a
	Texinfo 4.1 bug.
	Report from Dalibor Topic.

2003-11-22  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/411:
	* automake.in (rewrite_inputs_into_dependencies): Simplify, and rename
	into ...
	(prepend_srcdir): ... this.
	(rewrite_inputs_into_dependencies): New function, extracted from ...
	(handle_configure): ... here.  Adjust to use prepend_srcdir